--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "9.8.6",
     "core-js": "^3.6.5",
+    "postcss-pxtorem": "^5.1.1",
+    "swiper": "^6.3.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
