axios配置,接口处理

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "9.8.6",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "postcss-pxtorem": "^5.1.1",
     "swiper": "^6.3.5",
