--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "9.8.6",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "postcss-pxtorem": "^5.1.1",
     "swiper": "^6.3.5",
     "vue": "^2.6.11",
