--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "dependencies": {
     "autoprefixer": "9.8.6",
     "axios": "^0.21.0",
+    "babel-plugin-import": "^1.13.1",
+    "better-scroll": "^2.0.5",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
+    "nprogress": "^0.2.0",
     "postcss-pxtorem": "^5.1.1",
     "swiper": "^6.3.5",
+    "vant": "^2.10.13",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
